@@ -5,8 +5,6 @@ if [[ "$1" == "--help"  || $# -lt 1 ]]; then
     echo -e "$0 [OPTIONS], where options can be:"
     echo -e "\t--secret=SECRET\t sets the shared secret used to authenticate to the XMPP server"
     echo -e "\t--domain=DOMAIN\t sets the XMPP domain (default: none)"
-    echo -e "\t--min-port=MP\t sets the min port used for media (default: 10001)"
-    echo -e "\t--max-port=MP\t sets the max port used for media (default: 20000)"
     echo -e "\t--host=HOST\t sets the hostname of the XMPP server (default: domain, if domain is set, \"localhost\" otherwise)"
     echo -e "\t--port=PORT\t sets the port of the XMPP server (default: 5275)"
     echo -e "\t--subdomain=SUBDOMAIN\t sets the sub-domain used to bind JVB XMPP component (default: jitsi-videobridge)"
@@ -34,4 +32,4 @@ fi
 
 if [ -z "$VIDEOBRIDGE_MAX_MEMORY" ]; then VIDEOBRIDGE_MAX_MEMORY=3072m; fi
 
-LD_LIBRARY_PATH=$libs exec java -Xmx$VIDEOBRIDGE_MAX_MEMORY $VIDEOBRIDGE_DEBUG_OPTIONS -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp -Djava.library.path=$libs $LOGGING_CONFIG_PARAM $JAVA_SYS_PROPS -cp $cp $mainClass $@
+LD_LIBRARY_PATH=$libs exec java -Xmx$VIDEOBRIDGE_MAX_MEMORY $VIDEOBRIDGE_DEBUG_OPTIONS -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp -Djava.library.path=$libs $LOGGING_CONFIG_PARAM $JAVA_SYS_PROPS -cp $cp $mainClass $@
